# Synapse-OSS

./: .dockerignore  .env.example  .env.example.advanced  .gitattributes  .gitignore  .monitor.sh  .openclawignore  .windsurfrules  AGENTS.md  ARCHITECTURE.md  Assessment.md  CLAUDE.md  CLAUDE.md.original  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPENDENCIES.md  Dockerfile  FIXUP_INSTRUCTIONS.md  GOVERNANCE.md  HOW_TO_RUN.md  INTEGRATION_BLUEPRINT.md  LICENSE  MANIFESTO.md  ONBOARDING_BUGS.md  PRODUCT_ISSUES.md  PRODUCT_SHOWCASE_HANDOVER.md  QDRANT_TO_LANCEDB_IMPLEMENTATION_PLAN.md  README.md  SECURITY.md  SETUP_PERSONA.md  SYMBOLS.md  architecture_diagram.md  architecture_explainer.md  architecture_review.sh  docker-compose.demo.yml  docker-compose.yml  fix_unicode.py  health_v3.sh  install_qdrant_native.sh  jarvis_architecture.sh  (+42 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint-editor-rules.yml  metrics.yml  parity.yml  release.yml  tests.yml
.planning/: EMBEDDING_REFACTOR_PLAN.md  JARVIS-ARCH-PLAN.md  JARVIS-SESSION-HANDOFF.md  MODEL-AGNOSTIC-ROADMAP.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/handover-2026-04-26/: EVIDENCE.md  ROADMAP.md  STATUS.md  phase-1-surface-add-memory-failure.md  phase-2-fix-vector-path-failure.md  phase-3-auto-flush-on-idle.md  phase-4-deprecate-atomic-facts.md  phase-5-capability-tier-detect.md  phase-6-tool-loop-guard.md  phase-7-dual-cognition-off-antigravity.md  phase-8-traffic-cop-residue.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md  embedding_alternatives_apis.md  embedding_alternatives_local.md  hybrid_architectures.md  vector_db_benchmarks.md
agent-memory/: team-architecture.md  team-constraints.md  team-plan.md  team-research.md  team-review-feedback.md  team-test-report.md
baileys-bridge/: .gitignore  index.js  package-lock.json  package.json
baileys-bridge/lib/: creds_queue.js  restore.js  send_payload.js
baileys-bridge/test/: creds_queue.test.js  extract_payload.test.js  health_endpoint.test.js  restore.test.js  send_shapes.test.js
content/: reel-markdown-to-sqlite-vec.md
content/hybrid-rag-explainer/: index.html
content/synapse-oss/: calendar.md  goldmine.md
content/synapse-vision/: index.html
deploy/: README.md  synapse.service
docs/: demo-profile.md  kg-limits.md  local-only-benchmark.md  model-parity.md  multiuser.md  provider-testing.md
docs/_generated/: metrics.json
docs/archive/: CLAUDE.md.pre-rewrite.md  README.md
docs/benchmarks/: README.md
extensions/whatsapp-fastapi-relay/: index.js  openclaw.plugin.json
mcp-handover/: ORCHESTRATOR.md  phase0-prereqs.md  phase1-core-servers.md  phase2-personal-servers.md  phase3-client-integration.md  phase4-proactive.md  phase5-registry-and-server.md
scripts/: bench_kg_memory.py  bench_retrieval_latency.py  bench_storage.py  collect_metrics.sh  render_readme.py  run_all_benchmarks.sh
scripts/verify/: README.md  verify_dual_cognition.py  verify_soul.py
state/: logging_salt
website-demos/: option-a-neural-glow.html  option-b-midnight-bento.html  option-c-terminal-craft.html
workspace/: .gitignore  .openclawignore  AGENTS.md  CORE.md  HEARTBEAT.md  IDENTITY.md  INSTRUCTIONS.MD  MEMORY.md  MONITORING.md  README.md  SOUL.md  SYSTEM_HEALTH.md  TASK.md  TOOLS.md  USER.md  Vulnerabilities.md  __main__.py  benchmark_gpu.py  change_tracker.py  change_viewer.py  config.py  do_transcribe.py  finish_facts.py  implementation_plan.md  main.py  monitor.py  personas.yaml  personas.yaml.example  purge_trash.py  run_background.sh  scrape_threads.py  synapse_cli.py  synapse_config.py
workspace/cli/: __init__.py  channel_steps.py  chat_client.py  chat_loop.py  chat_types.py  daemon.py  doctor.py  first_run_bootstrap.py  gateway_process.py  gateway_steps.py  health.py  inquirerpy_prompter.py  install_home.py  onboard.py  post_onboard_launch.py  provider_steps.py  sbs_profile_init.py  startup_overview.py  verify_steps.py  whatsapp_commands.py  wizard_prompter.py  workspace_seeding.py
workspace/config/: __init__.py  env_substitution.py  group_policy.py  includes.py  layered_resolution.py  merge_patch.py  migration.py  redaction.py  schema.py
workspace/db/: tools.py
workspace/sci_fi_dashboard/: _deps.py  action_receipts.py  antigravity_provider.py  api_gateway.py  auth_profiles.py  auto_flush.py  build_persona.py  channel_setup.py  chat_parser.py  chat_pipeline.py  claude_cli_provider.py  conflict_resolver.py  consent_protocol.py  conv_kg_extractor.py  cron_service.py  db.py  diary_engine.py  dual_cognition.py  emotional_trajectory.py  entities.json  gentle_worker.py  google_oauth.py  humanity_eval.py  ingest.py  llm_router.py  llm_wrappers.py  mcp_client.py  mcp_config.py  memory_affect.py  memory_engine.py  middleware.py  migrate_graph.py  models_catalog.py  narrative.py  openai_codex_oauth.py  openai_codex_provider.py  owner_registry.py  persona.py  pipeline_emitter.py  pipeline_helpers.py  (+32 more)
workspace/scripts/: change_tracker.py  db_cleanup.py  db_organize.py  debug_grep.py  dedupe_today_session.py  dsa_logger.py  eval_longitudinal_personality.py  eval_personality_differentiation.py  eval_proactive_memory_canary.py  fact_extractor.py  genesis.py  import_whatsapp.py  latency_watcher.py  manual_ingest_today.py  memory_test.py  metabolism_master.sh  migrate_openclaw.py  migrate_temporal.py  migrate_to_lancedb.py  nightly_ingest.py  optimize_db.py  prune_sessions.py  ram_watchdog.py  revive_jarvis.sh  rollback.sh  sanitizer.py  seed_dummy_user.py  sentinel.py  sentinel_heal.sh  setup_native_auth.py  simulate_brain.py  transcribe_v2.py  update_memory_schema.py
workspace/skills/: google_native.py  llm_router.py
workspace/state/: logging_salt
workspace/tasks/: research-phase3.md  research-phase4.md  research-phase5.md
workspace/tests/: TEST_RESULTS.md  conftest.py  pytest.ini  test_acceptance.py  test_api_gateway.py  (+218 more)
(+561 files in other folders)
