[project]
name = "synapse-oss"
version = "3.0.0"
description = "Multi-agent AI assistant with hybrid memory, evolving personality, and privacy-first routing"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Upayan Ghosh", email = "upayan1231@gmail.com"},
]
keywords = ["ai", "assistant", "rag", "multi-agent", "whatsapp", "fastapi", "knowledge-graph"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "litellm>=1.82.0,<1.83.0",
    "typer[all]>=0.24.0",
    "questionary>=2.1.0",
    "qrcode>=8.0",
]

[project.urls]
Homepage = "https://github.com/UpayanGhosh/Synapse-OSS"
Repository = "https://github.com/UpayanGhosh/Synapse-OSS"
Issues = "https://github.com/UpayanGhosh/Synapse-OSS/issues"

[project.scripts]
synapse = "synapse_cli:app"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]
