[project]
name = "synapse-oss"
version = "3.0.0"
description = "Multi-agent AI assistant with hybrid memory, evolving personality, and privacy-first routing"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Upayan Ghosh", email = "upayan1231@gmail.com"},
]
keywords = ["ai", "assistant", "rag", "multi-agent", "whatsapp", "fastapi", "knowledge-graph"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "litellm>=1.82.0,<1.83.0",
    "typer[all]>=0.24.0",
    "questionary>=2.1.0",
    "qrcode>=8.0",
]

[project.urls]
Homepage = "https://github.com/UpayanGhosh/Synapse-OSS"
Repository = "https://github.com/UpayanGhosh/Synapse-OSS"
Issues = "https://github.com/UpayanGhosh/Synapse-OSS/issues"

[project.scripts]
synapse = "synapse_cli:app"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Legacy V2 utility scripts — not part of the core Synapse-OSS system
"workspace/monitor.py" = ["E", "F", "W", "B", "SIM", "UP", "C4"]
"workspace/change_tracker.py" = ["E", "F", "W", "B", "SIM", "UP", "C4"]
"workspace/change_viewer.py" = ["E", "F", "W", "B", "SIM", "UP", "C4"]
"workspace/finish_facts.py" = ["E", "F", "W", "B", "SIM", "UP", "C4"]
"workspace/purge_trash.py" = ["E", "F", "W", "B", "SIM", "UP", "C4"]
"workspace/scripts/*.py" = ["E", "F", "W", "B", "SIM", "UP", "C4"]
"workspace/skills/**/*.py" = ["E", "F", "W", "B", "SIM", "UP", "C4"]
# do_transcribe.py uses sys.path manipulation before imports — E402 is intentional
"workspace/do_transcribe.py" = ["E402"]

[tool.black]
line-length = 100
target-version = ["py311"]
