[project]
name = "synapse-oss"
version = "3.0.0"
description = "Multi-agent AI assistant with hybrid memory, evolving personality, and privacy-first routing"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Upayan Ghosh", email = "upayan1231@gmail.com"},
]
keywords = ["ai", "assistant", "rag", "multi-agent", "whatsapp", "fastapi", "knowledge-graph"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "litellm>=1.82.0,<1.83.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "httpx>=0.25.0",
    "requests>=2.31.0",
    "pydantic>=2.5.0",
    "psutil>=5.9.0",
    "rich>=13.0.0",
    "typer>=0.24.0",
    "questionary>=2.1.0",
    "InquirerPy>=0.3.4",
    "sqlite-vec>=0.1.1",
    "fastembed>=0.4.0",
    "lancedb>=0.6.0",
    "flashrank>=0.2.0",
    "flashtext>=2.7",
    "PyYAML>=6.0",
    "schedule>=1.2.0",
    "filelock>=3.12.0",
    "mcp>=1.0.0",
    "google-auth>=2.23.0",
    "google-auth-oauthlib>=1.1.0",
    "google-api-python-client>=2.100.0",
    "croniter>=6.2.2",
    "sse-starlette>=2.0.0",
    "fal-client>=0.13.0",
    "edge-tts>=7.0.0",
    "elevenlabs>=1.0.0",
    "python-telegram-bot>=22.0",
    "discord.py>=2.4.0",
    "slack-bolt>=1.18.0",
    "slack-sdk>=3.26.0",
    "aiohttp>=3.9.0",
    "websockets>=10.0",
    "qrcode>=8.0",
    "crawl4ai>=0.2.0; sys_platform != 'win32'",
    "playwright>=1.20.0; sys_platform == 'win32'",
    "trafilatura>=2.0.0",
    "duckduckgo-search>=7.0.0",
    "python-magic>=0.4.27",
    "python-magic-bin>=0.4.14; sys_platform == 'win32'",
]

[project.optional-dependencies]
ml = [
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "groq>=0.4.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
]

[project.urls]
Homepage = "https://github.com/UpayanGhosh/Synapse-OSS"
Repository = "https://github.com/UpayanGhosh/Synapse-OSS"
Issues = "https://github.com/UpayanGhosh/Synapse-OSS/issues"

[project.scripts]
synapse = "synapse_cli:app"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "workspace"}
include-package-data = false
py-modules = [
    "__main__",
    "change_tracker",
    "change_viewer",
    "config",
    "do_transcribe",
    "finish_facts",
    "main",
    "monitor",
    "purge_trash",
    "scrape_threads",
    "synapse_cli",
    "synapse_config",
]

[tool.setuptools.packages.find]
where = ["workspace"]
exclude = ["tests", "tests.*"]

[tool.setuptools.package-data]
cli = ["templates/*.md"]
sci_fi_dashboard = [
    "agent_workspace/*.md.template",
    "agent_workspace/INSTRUCTIONS.md",
    "agent_workspace/CORE.md",
    "agent_workspace/AGENTS.md",
    "entities.json",
    "skills/bundled/**/*",
    "sbs/feedback/*.yaml",
    "model_parity/*.yaml",
    "model_parity/*.yaml.example",
    "static/**/*",
    "runtime_assets/baileys-bridge/**/*",
]

[tool.setuptools.exclude-package-data]
sci_fi_dashboard = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Legacy V2 utility scripts — not part of the core Synapse-OSS system
"workspace/monitor.py" = ["E", "F", "W", "B", "SIM", "UP", "C4"]
"workspace/change_tracker.py" = ["E", "F", "W", "B", "SIM", "UP", "C4"]
"workspace/change_viewer.py" = ["E", "F", "W", "B", "SIM", "UP", "C4"]
"workspace/finish_facts.py" = ["E", "F", "W", "B", "SIM", "UP", "C4"]
"workspace/purge_trash.py" = ["E", "F", "W", "B", "SIM", "UP", "C4"]
"workspace/scripts/*.py" = ["E", "F", "W", "B", "SIM", "UP", "C4"]
"workspace/skills/**/*.py" = ["E", "F", "W", "B", "SIM", "UP", "C4"]
# do_transcribe.py uses sys.path manipulation before imports — E402 is intentional
"workspace/do_transcribe.py" = ["E402"]

[tool.black]
line-length = 100
target-version = ["py311"]
